# prostokont-firmware

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
boards/: inkplate-10.defaults  inkplate-13.defaults  (+8 more)
components/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/examples/inkplate10/basic/black_and_white/main/: logo.h  main.cpp
components/examples/inkplate10/basic/grayscale/main/: image_ex.h  main.cpp
components/examples/inkplate10/basic/hello_world/main/: main.cpp
components/examples/inkplate10/basic/image_converter/main/: image_ex.h  main.cpp
components/examples/inkplate10/basic/partial_update/main/: main.cpp
components/examples/inkplate10/basic/textbox/main/: Roboto_Light_36.h  main.cpp
components/examples/inkplate10/diagnostics/burn_in_clean/main/: main.cpp
components/examples/inkplate10/diagnostics/rtc_calibration/main/: main.cpp
components/examples/inkplate10/diagnostics/set_vcom/main/: main.cpp
components/examples/inkplate10/diagnostics/set_waveform/main/: image_ex.h  main.cpp
components/examples/inkplate2/advanced/deep_sleep/main/: main.cpp  picture1.h  picture2.h  picture3.h
components/examples/inkplate2/advanced/gpio/main/: main.cpp
components/examples/inkplate2/advanced/qwiic/main/: main.cpp
components/examples/inkplate2/advanced/wifi/https_with_certificate/: CMakeLists.txt
components/examples/inkplate2/basic/black_white_red/main/: main.cpp
components/examples/inkplate2/basic/hello_world/: CMakeLists.txt
components/examples/inkplate2/basic/hello_world/main/: main.cpp
components/examples/inkplate2/basic/image_converter/main/: image_ex.h  main.cpp
components/examples/inkplate2/basic/text_with_shadow/main/: main.cpp
components/examples/inkplate2/basic/textbox/main/: main.cpp
components/examples/inkplate2/diagnostics/burn_in_clean/main/: main.cpp
components/examples/inkplate4/advanced/other/png_from_buffer/: sdkconfig.defaults
components/examples/inkplate4/basic/black_white/main/: main.cpp
components/examples/inkplate4/basic/grayscale/main/: image_ex.h  main.cpp
components/examples/inkplate4/basic/hello_world/main/: main.cpp
components/examples/inkplate4/basic/image_converter/main/: image_ex.h  main.cpp
components/examples/inkplate4/basic/partial_update/main/: main.cpp
components/examples/inkplate4/basic/simple_frontlight/main/: main.cpp
components/examples/inkplate4/basic/textbox/main/: Roboto_Light_36.h  main.cpp
components/include/: Display.h  Inkplate.h
components/include/config/: AppConfig.hpp  FirmwareDescriptor.hpp  SelectedBoard.hpp
components/include/features/: Frontlight.h  I2C.h  I2S.h  PCAL.h  RTC.h  SDCard.h  SPI.h  TPS.h  Touch.h  TouchCypress.h  TouchElan.h
components/include/features/APDS9960/: APDS9960.h
components/include/features/APDS9960/libs/: APDS9960Driver.h
components/include/features/BME680/: BME680.h
components/include/features/BME680/libs/: BME680Driver.h
components/include/features/BQ27441/: BQ27441.h
components/include/features/BQ27441/libs/: BQ27441Driver.h  BQ27441_Definitions.h
components/include/features/LSM6DS3/: LSM6DS3.h
components/include/features/LSM6DS3/libs/: LSM6DS3Driver.h
components/include/graphics/: DitherKernels.h  Graphics.h  GraphicsDefs.h  Image.h  ImageColor.h  Shapes.h
components/include/graphics/Adafruit_GFX/: Adafruit_GFX.h  gfxfont.h
components/include/graphics/decoders/: BMP.h  JPEG.h  PNG.h
components/include/graphics/decoders/pngle/: pngle.h
components/include/panels/: PanelBase.h  PanelCommon.h  PanelDescriptor.hpp  PanelFactory.hpp
components/include/panels/inkplate/: Inkplate10.h  Inkplate13.h  Inkplate2.h  Inkplate4.h  Inkplate5.h  Inkplate6.h  Inkplate6Color.h
components/include/panels/waveshare/: Waveshare13.h
components/include/services/app/: ConnectivityCoordinator.hpp
components/include/services/ble/: BleDisplayService.hpp  BleProvisioningService.hpp
components/include/services/board/: BoardDescriptor.hpp  BoardProfile.hpp
components/include/services/device/: DeviceIdentity.hpp  StatusPayloadJson.hpp
components/include/services/display/: DisplayService.hpp
components/include/services/http/: HttpServer.hpp
components/include/services/network/: HttpClient.hpp  MdnsService.hpp
components/include/services/storage/: Storage.hpp
components/include/services/time/: TimeSyncService.hpp
components/include/services/wifi/: WifiManager.hpp
components/src/: Display.cpp
components/src/features/: Frontlight.cpp  I2C.cpp  I2S.cpp  PCAL.cpp  RTC.cpp  SDCard.cpp  SPI.cpp  TPS.cpp  TouchCypress.cpp  TouchElan.cpp
components/src/features/APDS9960/: APDS9960.cpp
components/src/features/APDS9960/libs/: APDS9960Driver.cpp
components/src/features/BME680/: BME680.cpp
components/src/features/BME680/libs/: BME680Driver.cpp
components/src/features/BQ27441/: BQ27441.cpp
components/src/features/BQ27441/libs/: BQ27441Driver.cpp
components/src/features/LSM6DS3/: LSM6DS3.cpp
components/src/features/LSM6DS3/libs/: LSM6DS3Driver.cpp
components/src/graphics/: Graphics.cpp  Image.cpp  ImageColor.cpp  Shapes.cpp
components/src/graphics/Adafruit_GFX/: Adafruit_GFX.cpp  glcdfont.c
components/src/graphics/decoders/: BMP.cpp  JPEG.cpp  PNG.cpp
components/src/graphics/decoders/pngle/: miniz.c  pngle.c
components/src/panels/: PanelCommon.cpp
components/src/panels/inkplate/: Inkplate10.cpp  Inkplate13.cpp  Inkplate2.cpp  Inkplate4.cpp  Inkplate5.cpp  Inkplate6.cpp  Inkplate6Color.cpp
components/src/panels/waveshare/: Waveshare13.cpp
components/src/services/app/: ConnectivityCoordinator.cpp
components/src/services/ble/: BleProvisioningService.cpp
components/src/services/device/: DeviceIdentity.cpp  StatusPayloadJson.cpp
components/src/services/display/: DisplayService.cpp
components/src/services/http/: HttpServer.cpp
components/src/services/network/: HttpClient.cpp  MdnsService.cpp
components/src/services/storage/: Storage.cpp
components/src/services/time/: TimeSyncService.cpp
components/src/services/wifi/: WifiManager.cpp
(+84 files in other folders)
